# AKO_media_agent

./: .gitignore  AKO_media_agent_功能列表.md  AKO_writer与AKO_media_agent关联度分析.md  README.md  pyproject.toml  requirements.txt  secrets.env.example  view_data.py
compliance/: data_usage_policy.md  incident_response.md  legal_review.md
config/: AKO_media_agent_config.yaml  AKO_media_post_template_v1.0.json  crawler_config.py  platform_settings.json
data/: platform_accounts.json
docs/: README.md  user_manual.md
prompts/analysis_prompts/: analysis_templates.md
prompts/brand_corpus/: corpus_index.md
prompts/copywriting_prompts/: brand_writing_prompt.md
src/: database.py  main.py
src/analysis/: engagement_predictor.py  gap_analyzer.py  keyword_extractor.py  sentiment_analyzer.py  topic_cluster.py
src/crawler/: competitor_tracker.py  media_crawler.py  news_monitor.py  trend_detector.py
src/decision/: content_planner.py  timing_optimizer.py  title_optimizer.py
src/evolution/: __init__.py
src/execution/: copywriter.py  publisher.py  visual_generator.py
src/feedback/: performance_tracker.py  rollback_manager.py  strategy_adjuster.py
templates/: ako_building_log_v2.md  ako_people_v2.md  cost_talk_v2.md  site_24h_v2.md  tech_0154_v2.md  twilight_architecture_v2.md
tests/: __init__.py  test_database.py
web_ui/: __init__.py  app.py
web_ui/static/: style.css
web_ui/templates/: analysis.html  base.html  content.html  crawler.html  dashboard.html  evolution.html  (+1 more)
whitepaper/: AKO_media_agent_learning_module_v1.0.md  AKO_media_agent_whitepaper_v1.2.md
(+24 files in other folders)
