[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ako-media-agent"
version = "1.2.0"
description = "AKO品牌自主媒体数据智能体 - 数据采集、智能分析、内容生成、自动发布"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AKO Team", email = "dev@akobuild.cloud"},
]
keywords = ["media", "agent", "ako", "content", "crawler", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyyaml>=6.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "jieba>=0.42.1",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
ml = [
    "bertopic>=0.16.0",
    "transformers>=4.35.0",
]

[project.scripts]
ako-media = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
